Import of SHARYANTO/Module-Patch-0.02 from CPAN.
gitpan-cpan-distribution: Module-Patch
gitpan-cpan-version:      0.02
gitpan-cpan-path:         SHARYANTO/Module-Patch-0.02.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name    = Module-Patch
-version = 0.01
+version = 0.02
 author  = Steven Haryanto <stevenharyanto@gmail.com>
 license = Perl_5
 copyright_holder = Steven Haryanto
@@ -35,6 +35,7 @@ Test::More=0.96
 
 ;runtime
 perl=5.010001
+Log::Any=0
 Module::Loaded=0
 Monkey::Patch=0
 
