--- a/META.yml
+++ b/META.yml
@@ -14,6 +14,7 @@ meta-spec:
   version: 1.4
 name: Module-Patch
 requires:
+  Log::Any: 0
   Module::Loaded: 0
   Monkey::Patch: 0
   Test::More: 0.96
@@ -21,4 +22,4 @@ requires:
 resources:
   homepage: http://search.cpan.org/dist/Module-Patch/
   repository: http://github.com/sharyanto/perl-Module-Patch
-version: 0.01
+version: 0.02
