--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name    = Module-Patch
-version = 0.02
+version = 0.03
 author  = Steven Haryanto <stevenharyanto@gmail.com>
 license = Perl_5
 copyright_holder = Steven Haryanto
@@ -31,7 +31,9 @@ install_command = cpanm -n .
 
 [Prereqs]
 ;testing
+Module::Load=0
 Test::More=0.96
+Test::Exception=0
 
 ;runtime
 perl=5.010001
