Import of SHARYANTO/Module-Patch-0.04 from CPAN.
gitpan-cpan-distribution: Module-Patch
gitpan-cpan-version:      0.04
gitpan-cpan-path:         SHARYANTO/Module-Patch-0.04.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,6 @@
+version = 0.04
+
 name    = Module-Patch
-version = 0.03
 author  = Steven Haryanto <stevenharyanto@gmail.com>
 license = Perl_5
 copyright_holder = Steven Haryanto
@@ -8,39 +9,15 @@ copyright_holder = Steven Haryanto
 homepage    = http://search.cpan.org/dist/Module-Patch/
 repository  = http://github.com/sharyanto/perl-Module-Patch
 
-[@Filter]
-bundle = @Classic
-remove = MakeMaker
-remove = PodVersion
-remove = PkgVersion
-[OurPkgVersion]
-[ModuleBuild]
+[@SHARYANTO]
 
-[ReadmeFromPod]
-[PodWeaver]
-[CheckChangeLog]
-
-[Test::Compile]
-[InstallRelease]
-install_command = cpanm -n .
-;[Twitter]
-;hash_tags = #perl #cpan
-;url_shortener = Metamark
-
-;[@Git]
-
-[Prereqs]
-;testing
+[Prereqs / TestRequires]
 Module::Load=0
 Test::More=0.96
 Test::Exception=0
 
-;runtime
+[Prereqs]
 perl=5.010001
 Log::Any=0
 Module::Loaded=0
 Monkey::Patch=0
-
-[Run::Release]
-;notexist_fatal = 0
-run = archive-perl-release %s
