Import of SHARYANTO/Module-Patch-0.06 from CPAN.
gitpan-cpan-distribution: Module-Patch
gitpan-cpan-version:      0.06
gitpan-cpan-path:         SHARYANTO/Module-Patch-0.06.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -3,6 +3,7 @@ abstract: 'Base class for patch module'
 author:
   - 'Steven Haryanto <stevenharyanto@gmail.com>'
 build_requires:
+  Capture::Tiny: 0
   Module::Build: 0.3601
   Module::Load: 0
   Test::Exception: 0
@@ -24,4 +25,4 @@ requires:
 resources:
   homepage: http://search.cpan.org/dist/Module-Patch/
   repository: http://github.com/sharyanto/perl-Module-Patch
-version: 0.05
+version: 0.06
