--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version = 0.05
+version = 0.06
 
 name    = Module-Patch
 author  = Steven Haryanto <stevenharyanto@gmail.com>
@@ -15,6 +15,7 @@ repository  = http://github.com/sharyanto/perl-Module-Patch
 Module::Load=0
 Test::More=0.96
 Test::Exception=0
+Capture::Tiny=0
 
 [Prereqs]
 perl=5.010001
