--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version = 0.06
+version = 0.07
 
 name    = Module-Patch
 author  = Steven Haryanto <stevenharyanto@gmail.com>
@@ -22,3 +22,4 @@ perl=5.010001
 Log::Any=0
 Module::Loaded=0
 Monkey::Patch=0
+SHARYANTO::Package::Util=0
