--- a/META.yml
+++ b/META.yml
@@ -18,12 +18,12 @@ meta-spec:
   version: 1.4
 name: Module-Patch
 requires:
+  Alt::Monkey::Patch::SHARYANTO: 0.01
   Log::Any: 0
   Module::Loaded: 0
-  Monkey::Patch: 0
   SHARYANTO::Package::Util: 0
   perl: 5.010001
 resources:
   homepage: http://search.cpan.org/dist/Module-Patch/
   repository: http://github.com/sharyanto/perl-Module-Patch
-version: 0.09
+version: 0.10
