--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version = 0.09
+version = 0.10
 
 name    = Module-Patch
 author  = Steven Haryanto <stevenharyanto@gmail.com>
@@ -21,5 +21,5 @@ Capture::Tiny=0
 perl=5.010001
 Log::Any=0
 Module::Loaded=0
-Monkey::Patch=0
+Alt::Monkey::Patch::SHARYANTO=0.01
 SHARYANTO::Package::Util=0
