--- a/META.yml
+++ b/META.yml
@@ -5,13 +5,12 @@ author:
 build_requires:
   Capture::Tiny: 0
   Module::Build: 0.3601
-  Module::Load: 0
   Test::Exception: 0
   Test::More: 0.96
 configure_requires:
   Module::Build: 0.3601
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300006, CPAN::Meta::Converter version 2.113640'
+generated_by: 'Dist::Zilla version 4.300015, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -20,10 +19,10 @@ name: Module-Patch
 requires:
   Alt::Monkey::Patch::SHARYANTO: 0.01
   Log::Any: 0
-  Module::Loaded: 0
+  SHARYANTO::Array::Util: 0
   SHARYANTO::Package::Util: 0
   perl: 5.010001
 resources:
   homepage: http://search.cpan.org/dist/Module-Patch/
   repository: http://github.com/sharyanto/perl-Module-Patch
-version: 0.11
+version: 0.12
