--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version = 0.11
+version = 0.12
 
 name    = Module-Patch
 author  = Steven Haryanto <stevenharyanto@gmail.com>
@@ -12,7 +12,6 @@ repository  = http://github.com/sharyanto/perl-Module-Patch
 [@SHARYANTO]
 
 [Prereqs / TestRequires]
-Module::Load=0
 Test::More=0.96
 Test::Exception=0
 Capture::Tiny=0
@@ -20,6 +19,6 @@ Capture::Tiny=0
 [Prereqs]
 perl=5.010001
 Log::Any=0
-Module::Loaded=0
 Alt::Monkey::Patch::SHARYANTO=0.01
+SHARYANTO::Array::Util=0
 SHARYANTO::Package::Util=0
