Import of SHARYANTO/Module-Patch-0.14 from CPAN.
gitpan-cpan-distribution: Module-Patch
gitpan-cpan-version:      0.14
gitpan-cpan-path:         SHARYANTO/Module-Patch-0.14.tar.gz
gitpan-cpan-author:       SHARYANTO
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version = 0.13
+version = 0.14
 
 name    = Module-Patch
 author  = Steven Haryanto <stevenharyanto@gmail.com>
@@ -19,6 +19,6 @@ Capture::Tiny=0
 [Prereqs]
 perl=5.010001
 Log::Any=0
-Alt::Monkey::Patch::SHARYANTO=0.01
+Monkey::Patch::Action=0.01
 SHARYANTO::Array::Util=0
 SHARYANTO::Package::Util=0
