--- a/META.yml
+++ b/META.yml
@@ -10,19 +10,19 @@ build_requires:
 configure_requires:
   Module::Build: 0.3601
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300002, CPAN::Meta::Converter version 2.112150'
+generated_by: 'Dist::Zilla version 4.300006, CPAN::Meta::Converter version 2.113640'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
 name: Module-Patch
 requires:
-  Alt::Monkey::Patch::SHARYANTO: 0.01
   Log::Any: 0
+  Monkey::Patch::Action: 0.01
   SHARYANTO::Array::Util: 0
   SHARYANTO::Package::Util: 0
   perl: 5.010001
 resources:
   homepage: http://search.cpan.org/dist/Module-Patch/
   repository: http://github.com/sharyanto/perl-Module-Patch
-version: 0.13
+version: 0.14
