--- a/META.yml
+++ b/META.yml
@@ -4,13 +4,15 @@ author:
   - 'Steven Haryanto <stevenharyanto@gmail.com>'
 build_requires:
   Capture::Tiny: 0
-  Module::Build: 0.3601
+  File::Spec: 0
+  IO::Handle: 0
+  IPC::Open3: 0
   Test::Exception: 0
   Test::More: 0.96
 configure_requires:
-  Module::Build: 0.3601
+  ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300028, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Dist::Zilla version 4.300038, CPAN::Meta::Converter version 2.132510'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -23,6 +25,7 @@ requires:
   SHARYANTO::Package::Util: 0
   perl: 5.010001
 resources:
-  homepage: http://search.cpan.org/dist/Module-Patch/
-  repository: http://github.com/sharyanto/perl-Module-Patch
-version: 0.17
+  bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Module-Patch
+  homepage: https://metacpan.org/release/Module-Patch
+  repository: git://github.com/sharyanto/perl-Module-Patch.git
+version: 0.18
