--- a/dist.ini
+++ b/dist.ini
@@ -1,15 +1,12 @@
-version = 0.17
+version = 0.18
 
 name    = Module-Patch
 author  = Steven Haryanto <stevenharyanto@gmail.com>
 license = Perl_5
 copyright_holder = Steven Haryanto
 
-[MetaResources]
-homepage    = http://search.cpan.org/dist/Module-Patch/
-repository  = http://github.com/sharyanto/perl-Module-Patch
-
-[@SHARYANTO]
+[@Author::SHARYANTO]
+:version=0.09
 
 [Prereqs / TestRequires]
 Test::More=0.96
