--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-version = 0.18
+version = 0.19
 
 name    = Module-Patch
 author  = Steven Haryanto <stevenharyanto@gmail.com>
@@ -6,7 +6,7 @@ license = Perl_5
 copyright_holder = Steven Haryanto
 
 [@Author::SHARYANTO]
-:version=0.09
+:version=0.23
 
 [Prereqs / TestRequires]
 Test::More=0.96
@@ -15,6 +15,7 @@ Capture::Tiny=0
 
 [Prereqs]
 perl=5.010001
+experimental=0
 Log::Any=0
 Monkey::Patch::Action=0.01
 SHARYANTO::Array::Util=0
