--- a/dist.ini
+++ b/dist.ini
@@ -1,11 +1,8 @@
-version = 0.19
+version = 0.20
 
 name    = Module-Patch
-author  = Steven Haryanto <stevenharyanto@gmail.com>
-license = Perl_5
-copyright_holder = Steven Haryanto
 
-[@Author::SHARYANTO]
+[@Author::PERLANCAR]
 :version=0.23
 
 [Prereqs / TestRequires]
@@ -18,5 +15,5 @@ perl=5.010001
 experimental=0
 Log::Any=0
 Monkey::Patch::Action=0.01
+Package::MoreUtil=0
 SHARYANTO::Array::Util=0
-SHARYANTO::Package::Util=0
